// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConditionalFilter render should render correctly - isDisabled 1`] = `
<div>
  <div
    class="pf-v6-l-split ins-c-conditional-filter ins-c-conditional-filter__split-items-space"
  >
    <div
      class="pf-v6-l-split__item"
    >
      <button
        aria-expanded="false"
        aria-label="Conditional filter toggle"
        class="pf-v6-c-menu-toggle pf-m-disabled ins-c-conditional-filter__group"
        data-ouia-component-id="ConditionalFilterToggle"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        disabled=""
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <span
            class="pf-v6-c-icon pf-m-md"
          >
            <span
              class="pf-v6-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M28.5 2h-25C2.673 2 2 2.673 2 3.5V7c0 .265.105.52.293.707L12 17.414V30a1 1 0 0 0 1.316.949l6-2A1 1 0 0 0 20 28V17.414l9.707-9.707A1 1 0 0 0 30 7V3.5c0-.827-.673-1.5-1.5-1.5ZM28 6.586l-9.707 9.707A1 1 0 0 0 18 17v10.279l-4 1.333V16.999a.997.997 0 0 0-.293-.707L4 6.586V4h24v2.586Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
          <span
            class="ins-c-conditional-filter__value-selector"
          >
            Simple text 1
          </span>
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      class="pf-v6-l-split__item pf-m-fill"
      data-ouia-component-id="ConditionalFilter"
    >
      <span
        class="pf-v6-c-form-control pf-m-icon ins-c-conditional-filter"
      >
        <input
          aria-invalid="false"
          aria-label="text input"
          data-ouia-component-id="ConditionalFilter"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe="true"
          placeholder="Filter by simple text 1"
          type="text"
          value=""
          widget-type="InsightsInput"
        />
        <span
          class="pf-v6-c-form-control__utilities"
        >
          <span
            class="pf-v6-c-form-control__icon"
          >
            <span
              class="pf-v6-c-icon pf-m-md ins-c-search-icon"
            >
              <span
                class="pf-v6-c-icon__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`ConditionalFilter render should render correctly 1`] = `
<div>
  <div
    class="ins-c-conditional-filter"
  >
    <span
      class="pf-v6-c-form-control pf-m-icon ins-c-conditional-filter"
    >
      <input
        aria-invalid="false"
        aria-label="text input"
        data-ouia-component-id="ConditionalFilter"
        data-ouia-component-type="PF6/TextInput"
        data-ouia-safe="true"
        id="default-input"
        type="text"
        value=""
        widget-type="InsightsInput"
      />
      <span
        class="pf-v6-c-form-control__utilities"
      >
        <span
          class="pf-v6-c-form-control__icon"
        >
          <span
            class="pf-v6-c-icon pf-m-md ins-c-search-icon"
          >
            <span
              class="pf-v6-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`ConditionalFilter render should render correctly checkbox with value checkbox-filter 1`] = `
<div>
  <div
    class="pf-v6-l-split ins-c-conditional-filter ins-c-conditional-filter__split-items-space"
  >
    <div
      class="pf-v6-l-split__item"
    >
      <button
        aria-expanded="false"
        aria-label="Conditional filter toggle"
        class="pf-v6-c-menu-toggle ins-c-conditional-filter__group"
        data-ouia-component-id="ConditionalFilterToggle"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <span
            class="pf-v6-c-icon pf-m-md"
          >
            <span
              class="pf-v6-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M28.5 2h-25C2.673 2 2 2.673 2 3.5V7c0 .265.105.52.293.707L12 17.414V30a1 1 0 0 0 1.316.949l6-2A1 1 0 0 0 20 28V17.414l9.707-9.707A1 1 0 0 0 30 7V3.5c0-.827-.673-1.5-1.5-1.5ZM28 6.586l-9.707 9.707A1 1 0 0 0 18 17v10.279l-4 1.333V16.999a.997.997 0 0 0-.293-.707L4 6.586V4h24v2.586Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
          <span
            class="ins-c-conditional-filter__value-selector"
          >
            Checkbox
          </span>
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      class="pf-v6-l-split__item pf-m-fill"
      data-ouia-component-id="ConditionalFilter"
    >
      <button
        aria-expanded="false"
        aria-label="Options menu"
        class="pf-v6-c-menu-toggle pf-m-full-width"
        data-ouia-component-id="OUIA-Generated-MenuToggle-:r16:"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          Filter by checkbox
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`ConditionalFilter render should render correctly no value with value  1`] = `
<div>
  <div
    class="pf-v6-l-split ins-c-conditional-filter ins-c-conditional-filter__split-items-space"
  >
    <div
      class="pf-v6-l-split__item"
    >
      <button
        aria-expanded="false"
        aria-label="Conditional filter toggle"
        class="pf-v6-c-menu-toggle ins-c-conditional-filter__group"
        data-ouia-component-id="ConditionalFilterToggle"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <span
            class="pf-v6-c-icon pf-m-md"
          >
            <span
              class="pf-v6-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M28.5 2h-25C2.673 2 2 2.673 2 3.5V7c0 .265.105.52.293.707L12 17.414V30a1 1 0 0 0 1.316.949l6-2A1 1 0 0 0 20 28V17.414l9.707-9.707A1 1 0 0 0 30 7V3.5c0-.827-.673-1.5-1.5-1.5ZM28 6.586l-9.707 9.707A1 1 0 0 0 18 17v10.279l-4 1.333V16.999a.997.997 0 0 0-.293-.707L4 6.586V4h24v2.586Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
          <span
            class="ins-c-conditional-filter__value-selector"
          >
            Simple text 1
          </span>
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      class="pf-v6-l-split__item pf-m-fill"
      data-ouia-component-id="ConditionalFilter"
    >
      <span
        class="pf-v6-c-form-control pf-m-icon ins-c-conditional-filter"
      >
        <input
          aria-invalid="false"
          aria-label="text input"
          data-ouia-component-id="ConditionalFilter"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe="true"
          placeholder="Filter by simple text 1"
          type="text"
          value=""
          widget-type="InsightsInput"
        />
        <span
          class="pf-v6-c-form-control__utilities"
        >
          <span
            class="pf-v6-c-form-control__icon"
          >
            <span
              class="pf-v6-c-icon pf-m-md ins-c-search-icon"
            >
              <span
                class="pf-v6-c-icon__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`ConditionalFilter render should render correctly radio filter with value radio-filter 1`] = `
<div>
  <div
    class="pf-v6-l-split ins-c-conditional-filter ins-c-conditional-filter__split-items-space"
  >
    <div
      class="pf-v6-l-split__item"
    >
      <button
        aria-expanded="false"
        aria-label="Conditional filter toggle"
        class="pf-v6-c-menu-toggle ins-c-conditional-filter__group"
        data-ouia-component-id="ConditionalFilterToggle"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <span
            class="pf-v6-c-icon pf-m-md"
          >
            <span
              class="pf-v6-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M28.5 2h-25C2.673 2 2 2.673 2 3.5V7c0 .265.105.52.293.707L12 17.414V30a1 1 0 0 0 1.316.949l6-2A1 1 0 0 0 20 28V17.414l9.707-9.707A1 1 0 0 0 30 7V3.5c0-.827-.673-1.5-1.5-1.5ZM28 6.586l-9.707 9.707A1 1 0 0 0 18 17v10.279l-4 1.333V16.999a.997.997 0 0 0-.293-.707L4 6.586V4h24v2.586Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
          <span
            class="ins-c-conditional-filter__value-selector"
          >
            Radio filter
          </span>
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      class="pf-v6-l-split__item pf-m-fill"
      data-ouia-component-id="ConditionalFilter"
    >
      <button
        aria-expanded="false"
        aria-label="Options menu"
        class="pf-v6-c-menu-toggle pf-m-full-width"
        data-ouia-component-id="OUIA-Generated-MenuToggle-:r1d:"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          Filter by radio filter
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`ConditionalFilter render should render correctly simple text 1 with value simple-text-1 1`] = `
<div>
  <div
    class="pf-v6-l-split ins-c-conditional-filter ins-c-conditional-filter__split-items-space"
  >
    <div
      class="pf-v6-l-split__item"
    >
      <button
        aria-expanded="false"
        aria-label="Conditional filter toggle"
        class="pf-v6-c-menu-toggle ins-c-conditional-filter__group"
        data-ouia-component-id="ConditionalFilterToggle"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <span
            class="pf-v6-c-icon pf-m-md"
          >
            <span
              class="pf-v6-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M28.5 2h-25C2.673 2 2 2.673 2 3.5V7c0 .265.105.52.293.707L12 17.414V30a1 1 0 0 0 1.316.949l6-2A1 1 0 0 0 20 28V17.414l9.707-9.707A1 1 0 0 0 30 7V3.5c0-.827-.673-1.5-1.5-1.5ZM28 6.586l-9.707 9.707A1 1 0 0 0 18 17v10.279l-4 1.333V16.999a.997.997 0 0 0-.293-.707L4 6.586V4h24v2.586Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
          <span
            class="ins-c-conditional-filter__value-selector"
          >
            Simple text 1
          </span>
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      class="pf-v6-l-split__item pf-m-fill"
      data-ouia-component-id="ConditionalFilter"
    >
      <span
        class="pf-v6-c-form-control pf-m-icon ins-c-conditional-filter"
      >
        <input
          aria-invalid="false"
          aria-label="text input"
          data-ouia-component-id="ConditionalFilter"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe="true"
          placeholder="Filter by simple text 1"
          type="text"
          value=""
          widget-type="InsightsInput"
        />
        <span
          class="pf-v6-c-form-control__utilities"
        >
          <span
            class="pf-v6-c-form-control__icon"
          >
            <span
              class="pf-v6-c-icon pf-m-md ins-c-search-icon"
            >
              <span
                class="pf-v6-c-icon__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`ConditionalFilter render should render correctly simple text 2 with value simple-text-2 1`] = `
<div>
  <div
    class="pf-v6-l-split ins-c-conditional-filter ins-c-conditional-filter__split-items-space"
  >
    <div
      class="pf-v6-l-split__item"
    >
      <button
        aria-expanded="false"
        aria-label="Conditional filter toggle"
        class="pf-v6-c-menu-toggle ins-c-conditional-filter__group"
        data-ouia-component-id="ConditionalFilterToggle"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <span
            class="pf-v6-c-icon pf-m-md"
          >
            <span
              class="pf-v6-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M28.5 2h-25C2.673 2 2 2.673 2 3.5V7c0 .265.105.52.293.707L12 17.414V30a1 1 0 0 0 1.316.949l6-2A1 1 0 0 0 20 28V17.414l9.707-9.707A1 1 0 0 0 30 7V3.5c0-.827-.673-1.5-1.5-1.5ZM28 6.586l-9.707 9.707A1 1 0 0 0 18 17v10.279l-4 1.333V16.999a.997.997 0 0 0-.293-.707L4 6.586V4h24v2.586Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
          <span
            class="ins-c-conditional-filter__value-selector"
          >
            Simple text 2
          </span>
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      class="pf-v6-l-split__item pf-m-fill"
      data-ouia-component-id="ConditionalFilter"
    >
      <span
        class="pf-v6-c-form-control pf-m-icon ins-c-conditional-filter"
      >
        <input
          aria-invalid="false"
          aria-label="text input"
          data-ouia-component-id="ConditionalFilter"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe="true"
          placeholder="Filter by simple text 2"
          type="text"
          value="some-value blaa"
          widget-type="InsightsInput"
        />
        <span
          class="pf-v6-c-form-control__utilities"
        >
          <span
            class="pf-v6-c-form-control__icon"
          >
            <span
              class="pf-v6-c-icon pf-m-md ins-c-search-icon"
            >
              <span
                class="pf-v6-c-icon__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`ConditionalFilter render should render correctly with config - each item as disabled 1`] = `
<div>
  <div
    class="pf-v6-l-split ins-c-conditional-filter ins-c-conditional-filter__split-items-space"
  >
    <div
      class="pf-v6-l-split__item"
    >
      <button
        aria-expanded="false"
        aria-label="Conditional filter toggle"
        class="pf-v6-c-menu-toggle ins-c-conditional-filter__group"
        data-ouia-component-id="ConditionalFilterToggle"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <span
            class="pf-v6-c-icon pf-m-md"
          >
            <span
              class="pf-v6-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M28.5 2h-25C2.673 2 2 2.673 2 3.5V7c0 .265.105.52.293.707L12 17.414V30a1 1 0 0 0 1.316.949l6-2A1 1 0 0 0 20 28V17.414l9.707-9.707A1 1 0 0 0 30 7V3.5c0-.827-.673-1.5-1.5-1.5ZM28 6.586l-9.707 9.707A1 1 0 0 0 18 17v10.279l-4 1.333V16.999a.997.997 0 0 0-.293-.707L4 6.586V4h24v2.586Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
          <span
            class="ins-c-conditional-filter__value-selector"
          >
            Simple text 1
          </span>
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      class="pf-v6-l-split__item pf-m-fill"
      data-ouia-component-id="ConditionalFilter"
    >
      <span
        class="pf-v6-c-form-control pf-m-disabled pf-m-icon ins-c-conditional-filter"
      >
        <input
          aria-invalid="false"
          aria-label="text input"
          data-ouia-component-id="ConditionalFilter"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe="true"
          disabled=""
          placeholder="Filter by simple text 1"
          type="text"
          value=""
          widget-type="InsightsInput"
        />
        <span
          class="pf-v6-c-form-control__utilities"
        >
          <span
            class="pf-v6-c-form-control__icon"
          >
            <span
              class="pf-v6-c-icon pf-m-md ins-c-search-icon"
            >
              <span
                class="pf-v6-c-icon__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`ConditionalFilter render should render correctly with config 1`] = `
<div>
  <div
    class="pf-v6-l-split ins-c-conditional-filter ins-c-conditional-filter__split-items-space"
  >
    <div
      class="pf-v6-l-split__item"
    >
      <button
        aria-expanded="false"
        aria-label="Conditional filter toggle"
        class="pf-v6-c-menu-toggle ins-c-conditional-filter__group"
        data-ouia-component-id="ConditionalFilterToggle"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <span
            class="pf-v6-c-icon pf-m-md"
          >
            <span
              class="pf-v6-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M28.5 2h-25C2.673 2 2 2.673 2 3.5V7c0 .265.105.52.293.707L12 17.414V30a1 1 0 0 0 1.316.949l6-2A1 1 0 0 0 20 28V17.414l9.707-9.707A1 1 0 0 0 30 7V3.5c0-.827-.673-1.5-1.5-1.5ZM28 6.586l-9.707 9.707A1 1 0 0 0 18 17v10.279l-4 1.333V16.999a.997.997 0 0 0-.293-.707L4 6.586V4h24v2.586Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
          <span
            class="ins-c-conditional-filter__value-selector"
          >
            Simple text 1
          </span>
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      class="pf-v6-l-split__item pf-m-fill"
      data-ouia-component-id="ConditionalFilter"
    >
      <span
        class="pf-v6-c-form-control pf-m-icon ins-c-conditional-filter"
      >
        <input
          aria-invalid="false"
          aria-label="text input"
          data-ouia-component-id="ConditionalFilter"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe="true"
          placeholder="Filter by simple text 1"
          type="text"
          value=""
          widget-type="InsightsInput"
        />
        <span
          class="pf-v6-c-form-control__utilities"
        >
          <span
            class="pf-v6-c-form-control__icon"
          >
            <span
              class="pf-v6-c-icon pf-m-md ins-c-search-icon"
            >
              <span
                class="pf-v6-c-icon__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`ConditionalFilter render should render correctly with one filter 1`] = `
<div>
  <div
    class="pf-v6-l-split ins-c-conditional-filter ins-c-conditional-filter__split-items-space"
  >
    <div
      class="pf-v6-l-split__item pf-m-fill"
      data-ouia-component-id="ConditionalFilter"
    >
      <span
        class="pf-v6-c-form-control pf-m-icon ins-c-conditional-filter"
      >
        <input
          aria-invalid="false"
          aria-label="text input"
          data-ouia-component-id="ConditionalFilter"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe="true"
          placeholder="Filter by simple text 1"
          type="text"
          value=""
          widget-type="InsightsInput"
        />
        <span
          class="pf-v6-c-form-control__utilities"
        >
          <span
            class="pf-v6-c-form-control__icon"
          >
            <span
              class="pf-v6-c-icon pf-m-md ins-c-search-icon"
            >
              <span
                class="pf-v6-c-icon__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`ConditionalFilter render should render correctly with with the active label hidden 1`] = `
<div>
  <div
    class="pf-v6-l-split ins-c-conditional-filter ins-c-conditional-filter__split-items-space"
  >
    <div
      class="pf-v6-l-split__item"
    >
      <button
        aria-expanded="false"
        aria-label="Conditional filter toggle"
        class="pf-v6-c-menu-toggle ins-c-conditional-filter__group ins-c-conditional-filter__no-label"
        data-ouia-component-id="ConditionalFilterToggle"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <span
            class="pf-v6-c-icon pf-m-md"
          >
            <span
              class="pf-v6-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M28.5 2h-25C2.673 2 2 2.673 2 3.5V7c0 .265.105.52.293.707L12 17.414V30a1 1 0 0 0 1.316.949l6-2A1 1 0 0 0 20 28V17.414l9.707-9.707A1 1 0 0 0 30 7V3.5c0-.827-.673-1.5-1.5-1.5ZM28 6.586l-9.707 9.707A1 1 0 0 0 18 17v10.279l-4 1.333V16.999a.997.997 0 0 0-.293-.707L4 6.586V4h24v2.586Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      class="pf-v6-l-split__item pf-m-fill"
      data-ouia-component-id="ConditionalFilter"
    >
      <span
        class="pf-v6-c-form-control pf-m-icon ins-c-conditional-filter"
      >
        <input
          aria-invalid="false"
          aria-label="text input"
          data-ouia-component-id="ConditionalFilter"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe="true"
          placeholder="Filter by simple text 1"
          type="text"
          value=""
          widget-type="InsightsInput"
        />
        <span
          class="pf-v6-c-form-control__utilities"
        >
          <span
            class="pf-v6-c-form-control__icon"
          >
            <span
              class="pf-v6-c-icon pf-m-md ins-c-search-icon"
            >
              <span
                class="pf-v6-c-icon__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;
